[package]
name = "ams"
version = "0.1.0"
authors = ["Zac.R<self@zhichao.ren>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt ="1.0.0"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
lazy_static = "1.4.0"
toml = "0.5.6"
mysql = "17.0.0"
#postgres = "0.17.1" # 該數據庫鏈接為發佈正式版暫時棄用
